--- a/includes/header-home.html
+++ b/includes/header-home.html
@@ -3,7 +3,10 @@
     <nav class="navbar container">
         <a href="#" class="logo">
             <img src="./assets/images/logo.png" alt="Le Bureau Connecté Logo" class="logo-image">
-            <span class="logo-text">LE BUREAU CONNECTÉ</span>
+            <span class="logo-text">
+                <span class="logo-line1">LE BUREAU</span>
+                <span class="logo-line2">CONNECTÉ</span>
+            </span>
         </a>
         
         <ul class="nav-menu">
