--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,14 @@
+/*!
+ * Le Bureau Connecté - Website Styles
+ * Copyright (c) 2024 Le Bureau Connecté. All rights reserved.
+ * 
+ * This code is proprietary and confidential.
+ * Unauthorized copying, modification, or distribution is strictly prohibited.
+ * 
+ * Contact: 514-582-4850
+ * Address: 7591 St-Michel, Montreal, H2A 3A4
+ */
+
 /* CSS Variables */
 :root {
     --primary-green: #2d5a3d;
