--- a/includes/header.html
+++ b/includes/header.html
@@ -1,3 +1,10 @@
+<!--
+    Le Bureau Connecté - Header Component
+    
+    Copyright (c) 2024 Le Bureau Connecté. All rights reserved.
+    Unauthorized use prohibited. Contact: sadokdiba@icloud.com
+-->
+
 <!-- Header -->
 <header class="header">
     <nav class="navbar container">
